# liewei-agi-code-part1

01 高等数学/test_20210324/: test01.py  test02.py  test03.py  test04.py  test05.py  test06.py  test07.py  test08.py
02 线性代数01/test_20210104_1/: test01.py  test02.py  test03.py
03 线性代数02/test_20201230/: test01.py  test02.py  test03.py  test04.py  test05.py  test06.py  test07.py  test08.py
04 概率统计/test_20210106/: test01.py  test02.py  test03.py  test04.py  test05.py
05 numpy/: PILtest.py  code.py  test01.py
06 机器学习01/opencvprj/: Driving Mumbai - SoBo (Downtown) [Early 2018].txt  (+4 more)
10 opencv（一）/c++/: CMakeLists.txt  imgread.cpp  imgwrite.cpp  test20210115_c.cpp  test20210115_c.h
11 opencv（二）/: CMakeLists.txt  adaptive_threshold.cpp  add_.cpp  affine.cpp  bitwise.cpp  draw_shape.cpp  morphology.cpp  prespective.cpp  threshold.cpp  transforms.cpp  videoshow.cpp
12 opencv（三）/: canny.cpp  canny_ct.py  filter.cpp  test01.py  test020.py  usm.cpp
13 opencv（四）/: car_num.py  contour.py  contour_approx.py  contour_box.py  contour_convex.py  contour_feature.py  contour_line.py  contour_match.py  corner_harris.py  corner_shi_tomasi.py  fft_numpy.py  fft_opencv.py  hist.py  hist_ad.py  hist_eq.py  hist_pro.py  pyr_gass.py  pyr_laplace.py  pyr_mix.py  test01.py  test02.py  test03.py  test04.py
14 opencv（五）/: corner_harris.py  corner_shi_tomasi.py  hough_circle.py  hough_line.py  match_bf.py  match_flann.py  test01.py  watershed.py
15 全连接课上代码/: 作业要求.txt
16 mnisttest/: data.py  net.py  test01.py  test02.py  train.py
17 conv/: net.py  train.py  作业要求.txt
18 单目标侦测/: 作业要求.txt
(+97 files in other folders)
